<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/_bg__mobile_dashboard_ek2_color"
    >

    <RelativeLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="70.25dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true"
        android:clipToOutline="true"
        android:background="#0D0909"
        tools:ignore="MissingConstraints"
        >

        <TextView
            android:id="@+id/Upload"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal|center"
            android:gravity="center"
            android:text="@string/upload"
            android:textColor="@color/home_ek2_color"
            android:textSize="24dp" />

        <RelativeLayout
            android:id="@+id/group_2049"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginTop="11dp">


            <ImageView
                android:id="@+id/back_button"
                android:layout_width="20dp"
                android:layout_height="45dp"
                android:src="@drawable/icon"></ImageView>


        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/music2"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/music2photo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="0dp"
            android:contentDescription="unsplash_zcqjx2_z4sm_ek2"
            android:src="@drawable/unsplash_zcqjx2_z4sm_ek2" />


        <RelativeLayout
            android:id="@+id/music2info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="230dp"
            android:layout_marginStart="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/musicname"
                android:layout_width="200.1dp"
                android:layout_height="40.1dp"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginLeft="-2dp"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:text="@string/sanctuary_in_dying_light_string"
                android:textColor="@color/home_ek2_color"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/musicartist"
                android:layout_width="200.1dp"
                android:layout_height="40.1dp"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginLeft="-2dp"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="@string/the_luna_sequence_string"
                android:textColor="@color/home_ek2_color"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/musicyear"
                android:layout_width="200.1dp"
                android:layout_height="40.1dp"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginLeft="-2dp"
                android:layout_marginTop="80dp"
                android:gravity="center"
                android:text="2005"
                android:textColor="@color/home_ek2_color"
                android:textSize="16sp" />

        </RelativeLayout>
    </RelativeLayout>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/upload_button"
        android:layout_marginStart="85dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="86dp"
        android:stepSize="1.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/music2" />


    <RelativeLayout
        android:id="@+id/upload_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="94dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="57dp"
        android:background="@drawable/upload_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal|center"
            android:gravity="center"
            android:layout_marginTop="3dp"
            android:text="Upload this song to Ovatify! "
            android:textColor="@color/home_ek2_color"
            android:textSize="18dp"
            android:visibility="visible" />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>